<resources>
    <string name="app_name">ShopList</string>
    <string name="action_settings">Settings</string>
    <string name="add_error">Ошибка добавления (такой товар уже существует)</string>
    
    
    <string name="name_test">Помидора 3000 X K</string>
    <string name="icon_content_description">Product</string>
    <string name="price_word">Цена:</string>
    <string name="price_test">2000</string>
    <string name="rub_symbol">\u20BD</string>
    <string name="count_word">Количество на складе: </string>
    <string name="count_test">5</string>
    <string name="description_test">Очень вкусный помидор. Как моченное яблочко, только красный.</string>
    
    <string name="product_title_label">Товар</string>
    <string name="product_title_hint">Введите название продукта: </string>
    <string name="product_price_hint">Введите цену: </string>
    <string name="product_description_hint">Введите описание товара: </string>
    <string name="product_description_title">Описание продукта:</string>

    <string name="save_button">Сохранить изменения</string>
    <string name="canсel_button">Отменить изменения</string>

    <string name="item_title">Что сделать с продуктом?</string>
    <string name="edit_item">Редактировать</string>
    <string name="remove_item">Удалить</string>

    <string name="empty_fields_hint">У вас есть не заполненные поля</string>
    <string name="empty_list_hint">Лист продуктов пустой. Чтобы добавить новое описание продукта, нажмите \"+\"</string>
</resources>
