<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:text="@string/product_title_label"
        />

    <EditText
        android:id="@+id/product_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_title_hint"
/>


    <TextView
        android:text="@string/price_word"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/price_edit"
        android:hint="@string/product_price_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_description_title"/>

    <EditText
        android:id="@+id/description_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_description_hint"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:text="@string/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:text="@string/canсel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>